--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 OPENAI_API_KEY=sk-proj-7dY4TkqmIV7TV3joNuGVT3BlbkFJVSU9C0LduVUwQYUTtXbz
+OPENAI_API_KEY=sk-proj-7dY4TkqmIV7TV3joNuGVT3BlbkFJVSU9C0LduVUwQYUTtXbz
